# PDIMCPServer

./: .dockerignore  .env.example  .gitignore  AIAgentPrompt.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  generate_folders.py  mcp_server.py  package.json  pyproject.toml  requirements.txt  setup.py  setup.sh  streamlit_app.py  streamlit_chat.py
.github/workflows/: format.yml
pages/: chat.py
scripts/: check_format.sh  smoke_test_server.py  test_server.py  validate_db.py
src/: __init__.py  fastapi_server.py  mcp_server.py  server.py  tool_list.py  tool_loader.py
src/db/: connection.py  engine.py  models.py  session.py
src/repositories/: base.py  basket_repository.py  sales_repository.py
src/tests/: test_chat_render.py  test_connection.py  test_fastapi_server.py  test_streamlit_app.py  test_tool_loader.py  test_tools.py
src/tools/: basket_analysis.py  get_today_date.py  item_lookup.py  site_lookup.py  utils.py
src/tools/analytics/: __init__.py  daily_report.py  hourly_sales.py  low_movement.py  peak_hours.py  product_velocity.py  sales_anomalies.py  sales_forecast.py  sales_gaps.py  year_over_year.py
src/tools/basket/: basket_analysis.py  basket_metrics.py  cross_sell.py  item_correlation.py  transaction_lookup.py
src/tools/sales/: __init__.py  query_realtime.py  sales_summary.py  sales_trend.py  top_items.py
src/tools/tickets/: ticket_priority.py  ticket_sentiment.py
