[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-pdi-server"
version = "1.0.0"
description = "MCP server for PDI sales analytics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.9.4",
    "pymssql>=2.3.4",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "python-dotenv>=1.1.0",

    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "httpx>=0.28.1",
    "streamlit>=1.46.0",
    "ollama>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "black>=25.1.0",
    "mypy>=1.16.1",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
